# proiect_poo1

./: CMakeLists.txt  README.md  main.cpp  tastatura.txt
include/: AbstractEntity.h  Cashier.h  Counter.h  CustomException.h  Customer.h  Display_info_h  Employee.h  Manager.h  Pet.h  PetShop.h  Statistics.h
src/: Cashier.cpp  CustomException.cpp  Customer.cpp  Manager.cpp  Pet.cpp  PetShop.cpp
